tests/baselines/reference/parserIndexSignature6.errors.txt
tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature6.ts(2,3): error TS1021: An index signature must have a type annotation.
tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature6.ts(2,4): error TS1023: An index signature parameter type must be assignable to 'string | number | symbol'.
  Type 'boolean' is not assignable to type 'string | number | symbol'.


==== tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature6.ts (2 errors) ====
    interface I {
      [a:boolean]
      ~~~~~~~~~~~
!!! error TS1021: An index signature must have a type annotation.
       ~
!!! error TS1023: An index signature parameter type must be assignable to 'string | number | symbol'.
!!! error TS1023:   Type 'boolean' is not assignable to type 'string | number | symbol'.
    }